--- a/demo.html
+++ b/demo.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Football</title>
+
+    <style>
+        .football {
+            color: green;
+            background-color: lightyellow;
+            
+        }
+    </style>
 </head>
 <body>
-    <a href="https://realmadrid.com">visit realmadrid</a><br><br>
-    <a href="about.html">About Us</a><br><br>
-    <a href="mailto:naveen123@gmail.com">send mail </a><br><br>
-    <a href="tel:0987654321">call us</a><br><br>
-    <a href="https://realmadrid" target="_blank">visit realmadrid</a><br><br>
 
+    <h1 class="football">Football</h1>
+
+    <p class="football">
+        Football is my favourite sports.
+    </p>
+    <div class="football">
+        my idol is Cristiano Ronaldo
+    </div>
+
+    <div class="football">
+        I love to play Football
+    </div>
 
 </body>
 </html>
